# balta-toolkit

./: .gitignore  .gitignore~  CMakeLists.txt  README.md
include/include/balta_toolkit/: balta_toolkit.hpp
include/include/balta_toolkit/math_utils/: isposdef.hpp  math_utils.hpp
include/include/bex/: bex_config.h
include/include/btmulink/: btmulink.c  btmulink_types.h  simstruct.h
src/: main.cpp
src/math_utils/: isposdef.cpp
